# bulba

./: .travis.yml  CMakeLists.txt  README.md  conanfile.py  conanfile1.py  greeting.cpp  greeting.hpp  main.cpp
cmake/: potato-bulba-config.cmake
include/bulba/: greeting.hpp
src/: greeting.cpp
